Back End - SignIn and SignUp form all functions Done

--- a/Front_End/Hospital Dashboard.html
+++ b/Front_End/Hospital Dashboard.html
@@ -43,8 +43,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link active" href="#">Dashboard</a></li>
+                <li class="nav-item"><a class="nav-link" href="Home%20Page.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Logout</a></li>
             </ul>
