--- a/Front_End/Patient Dashboard.html
+++ b/Front_End/Patient Dashboard.html
@@ -178,6 +178,58 @@
             </div>
         </div>
     </div>
+
+    <!-- Blood Availability Table -->
+    <div class="col-md-12 mt-4">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title text-center">Hospital Name</h5>
+                <table class="table table-bordered text-center">
+                    <thead class="table-dark">
+                    <tr>
+                        <th>Blood Group</th>
+                        <th>Number of pints of blood currently available in the hospital blood bank</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>A+</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>A-</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>B+</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>B-</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>O+</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>O-</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>AB+</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>AB-</td>
+                        <td></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 <!-- Footer -->
