--- a/Front_End/Donor Dashboard.html
+++ b/Front_End/Donor Dashboard.html
@@ -37,8 +37,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link active" href="#">Donor Dashboard</a></li>
+                <li class="nav-item"><a class="nav-link" href="Home%20Page.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link active" href="Donor%20Dashboard.html">Donor Dashboard</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Donations</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Logout</a></li>
             </ul>
@@ -139,7 +139,8 @@
                         </div>
                         <br>
 
-                        <button type="submit" class="btn btn-danger">Register</button>
+                        <!--<button type="submit" class="btn btn-danger">Register</button>-->
+                        <button type="submit" class="btn btn-danger">Request Appointment</button>
                     </form>
                 </div>
             </div>
