LogOut.html done

--- a/Front_End/Patient Dashboard.html
+++ b/Front_End/Patient Dashboard.html
@@ -37,9 +37,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="Home%20Page.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link active" href="#">Patient Dashboard</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Requests</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Logout</a></li>
             </ul>
         </div>
