--- a/Front_End/Hospital Dashboard.html
+++ b/Front_End/Hospital Dashboard.html
@@ -6,20 +6,22 @@
     <title>Dashboard | Blood Donation System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body {
-            background: url('https://source.unsplash.com/1600x900/?health,hospital') no-repeat center center fixed;
-            background-size: cover;
-        }
         .card {
             overflow: hidden;
-            transition: transform 0.3s ease-in-out;
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+            border-radius: 15px;
+            background: rgba(255, 255, 255, 0.8); /* Transparent effect */
+            border: 2px solid rgba(0, 0, 0, 0.2); /* Added border */
         }
         .card:hover {
             transform: scale(1.05);
+            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
         }
-        .card-img-overlay {
-            background: rgba(0, 0, 0, 0.5);
-            color: white;
+        .card-img-top {
+            height: 200px;
+            object-fit: cover;
+            border-top-left-radius: 15px;
+            border-top-right-radius: 15px;
         }
         footer {
             position: relative;
@@ -43,7 +45,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="Home%20Page.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="Home%20Page.html ">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="Hospital%20Dashboard.html">Hospital</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Logout</a></li>
             </ul>
@@ -52,7 +55,40 @@
 </nav>
 
 <!-- Dashboard Content -->
-
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card mb-3">
+                <img src="images/Donor's%20Request.jpg" class="card-img-top" alt="Donor Requests">
+                <div class="card-body">
+                    <h5 class="card-title">Donor's Requests</h5>
+                    <p class="card-text">Manage and review all donor requests efficiently.</p>
+                    <a href="#" class="btn btn-danger">View Requests</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card mb-3">
+                <img src="images/Patient's%20Request.jpg" class="card-img-top" alt="Patient Requests">
+                <div class="card-body">
+                    <h5 class="card-title">Patients Requests</h5>
+                    <p class="card-text">Track and process blood requests from patients.</p>
+                    <a href="#" class="btn btn-success">View Requests</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card mb-3">
+                <img src="images/Blood%20Bank%20Inventory.jpg" class="card-img-top" alt="Inventory Management">
+                <div class="card-body">
+                    <h5 class="card-title">Inventory Management</h5>
+                    <p class="card-text">Monitor blood stock and manage inventory.</p>
+                    <a href="#" class="btn btn-warning">Manage Inventory</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!-- Footer -->
 <footer class="bg-dark text-white text-center py-3 mt-5">
