BloodBank, DonorsRequests, PatientsRequests UIs Done

--- a/Front_End/About Us.html
+++ b/Front_End/About Us.html
@@ -78,9 +78,9 @@
 <div class="container py-5 text-center">
     <h2>Contact Us</h2>
     <p>Have any questions? Feel free to reach out.</p>
-    <p>Email: <a href="mailto:info@blooddonationsystem.com">info@blooddonationsystem.com</a></p>
-    <p>Phone: +123 456 7890</p>
-    <p>Address: 123 Blood Drive, Health City, HC 45678</p>
+    <p>Email: <a href="mailto:chinthanachamod50@gmail.com">chinthanachamod50@gmail.com</a></p>
+    <p>Phone: +94 71 7500 753</p>
+    <p>Address: 30/15,"Leisure Terrace",Cemetery Rd,Pinwala,Panadura. </p>
 </div>
 
 <!-- Footer -->
