--- a/Front_End/Donor Dashboard.html
+++ b/Front_End/Donor Dashboard.html
@@ -39,8 +39,8 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="Home%20Page.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link active" href="Donor%20Dashboard.html">Donor Dashboard</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Donations</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Logout</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
+                <li class="nav-item"><a class="nav-link" href="LogOut.html">Logout</a></li>
             </ul>
         </div>
     </div>
