--- a/Front_End/Hospital Dashboard.html
+++ b/Front_End/Hospital Dashboard.html
@@ -46,9 +46,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="Home%20Page.html ">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="Hospital%20Dashboard.html">Hospital</a></li>
+                <li class="nav-item"><a class="nav-link active" href="Hospital%20Dashboard.html">Hospital</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Logout</a></li>
+                <li class="nav-item"><a class="nav-link" href="LogOut.html">Logout</a></li>
             </ul>
         </div>
     </div>
@@ -63,7 +63,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Donor's Requests</h5>
                     <p class="card-text">Manage and review all donor requests efficiently.</p>
-                    <a href="#" class="btn btn-danger">View Requests</a>
+                    <a href="Donors%20Requests.html" class="btn btn-danger">View Requests</a>
                 </div>
             </div>
         </div>
@@ -73,7 +73,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Patients Requests</h5>
                     <p class="card-text">Track and process blood requests from patients.</p>
-                    <a href="#" class="btn btn-success">View Requests</a>
+                    <a href="Patients%20Requests.html" class="btn btn-success">View Requests</a>
                 </div>
             </div>
         </div>
@@ -83,7 +83,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Inventory Management</h5>
                     <p class="card-text">Monitor blood stock and manage inventory.</p>
-                    <a href="#" class="btn btn-warning">Manage Inventory</a>
+                    <a href="Blood%20Bank%20Management.html" class="btn btn-warning">Manage Blood Inventory</a>
                 </div>
             </div>
         </div>
@@ -97,7 +97,7 @@
         <p>
             <a href="#" class="text-white text-decoration-none me-3">Privacy Policy</a> |
             <a href="#" class="text-white text-decoration-none me-3">Terms of Service</a> |
-            <a href="#" class="text-white text-decoration-none">Contact Us</a>
+            <a href="About%20Us.html" class="text-white text-decoration-none">Contact Us</a>
         </p>
     </div>
 </footer>
