--- a/Front_End/Patient Dashboard.html
+++ b/Front_End/Patient Dashboard.html
@@ -38,8 +38,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="Home%20Page.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link active" href="#">Patient Dashboard</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Logout</a></li>
+                <li class="nav-item"><a class="nav-link active" href="Patient%20Dashboard.html">Patient Dashboard</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
+                <li class="nav-item"><a class="nav-link" href="LogOut.html">Logout</a></li>
             </ul>
         </div>
     </div>
@@ -96,7 +97,15 @@
                                            value="Others">Others
                                 </label>
                             </div>
-                        </div></br>
+                        </div><br>
+                        <!--<div class="mb-3">
+                            <label class="form-label">Gender</label>
+                            <div>
+                                <input type="radio" name="gender" value="Male" checked> Male
+                                <input type="radio" name="gender" value="Female"> Female
+                                <input type="radio" name="gender" value="Other"> Other
+                            </div>
+                        </div>-->
 
                         <div class="mb-3">
                             <label for="contactNumber" class="form-label">Contact Number</label>
@@ -238,7 +247,7 @@
         <p>
             <a href="#" class="text-white text-decoration-none me-3">Privacy Policy</a> |
             <a href="#" class="text-white text-decoration-none me-3">Terms of Service</a> |
-            <a href="#" class="text-white text-decoration-none">Contact Us</a>
+            <a href="About%20Us.html" class="text-white text-decoration-none">Contact Us</a>
         </p>
     </div>
 </footer>
