Donor's Entity,DTO,Repository implemented

--- a/Front_End/Blood Bank Management.html
+++ b/Front_End/Blood Bank Management.html
@@ -108,6 +108,11 @@
 <footer class="bg-dark text-white text-center py-3 mt-5">
     <div class="container">
         <p>&copy; 2025 Blood Donation Management System. All Rights Reserved.</p>
+        <p>
+            <a href="#" class="text-white text-decoration-none me-3">Privacy Policy</a> |
+            <a href="#" class="text-white text-decoration-none me-3">Terms of Service</a> |
+            <a href="About%20Us.html" class="text-white text-decoration-none">Contact Us</a>
+        </p>
     </div>
 </footer>
 
