--- a/Front_End/Home Page.html
+++ b/Front_End/Home Page.html
@@ -121,8 +121,15 @@
 </section>
 
 <!-- Footer -->
-<footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2025 Blood Donation Management System. All Rights Reserved.</p>
+<footer class="bg-dark text-white text-center py-3 mt-5">
+    <div class="container">
+        <p>&copy; 2025 Blood Donation Management System. All Rights Reserved.</p>
+        <p>
+            <a href="#" class="text-white text-decoration-none me-3">Privacy Policy</a> |
+            <a href="#" class="text-white text-decoration-none me-3">Terms of Service</a> |
+            <a href="About%20Us.html" class="text-white text-decoration-none">Contact Us</a>
+        </p>
+    </div>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
