--- a/Front_End/Patient Dashboard.html
+++ b/Front_End/Patient Dashboard.html
@@ -146,6 +146,14 @@
                         </div>
 
 
+                        <!-- Hospital Selection -->
+                        <div class="mb-3">
+                            <label for="hospitalName" class="form-label">Hospital Name</label>
+                            <select class="form-select" id="hospitalName" required>
+                                <option value="">Select Hospital</option>
+                            </select>
+                        </div>
+
                         <div class="form-group">
                             <label for="email">Email address:</label>
                             <input type="email" class="form-control" id="email" placeholder="Enter your email"
@@ -158,11 +166,6 @@
                             <label for="homeAddress" class="form-label">Home Address</label>
                             <input type="text" class="form-control" id="homeAddress" required>
                         </div>
-                        <div class="mb-3">
-                            <label for="hospitalName" class="form-label">Hospital Name</label>
-                            <input type="text" class="form-control" id="hospitalName" required>
-                        </div>
-                        <br>
 
                         <button type="submit" class="btn btn-danger">Submit Request</button>
                     </form>
@@ -191,7 +194,7 @@
     <div class="col-md-12 mt-4">
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title text-center">Hospital Name</h5>
+                <h5 class="card-title text-center" id="hospital-name">Hospital Name</h5>
                 <table class="table table-bordered text-center">
                     <thead class="table-dark">
                     <tr>
@@ -199,7 +202,7 @@
                         <th>Number of pints of blood currently available in the hospital blood bank</th>
                     </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="blood-availability">
                     <tr>
                         <td>A+</td>
                         <td></td>
@@ -238,6 +241,7 @@
         </div>
     </div>
 
+
 </div>
 
 <!-- Footer -->
@@ -259,5 +263,142 @@
         alert("Blood request submitted successfully!");
     });
 </script>
+
+<script>
+    // Mapping of districts to their respective hospitals
+    const hospitalsByDistrict = {
+        "Colombo": ["Colombo National Hospital", "Nawaloka Hospital", "Asiri Central Hospital", "Base Hospital Colombo"],
+        "Kandy": ["Kandy Teaching Hospital", "Peradeniya Hospital", "Base Hospital Kandy", "Pallekele Base Hospital"],
+        "Galle": ["Karapitiya Teaching Hospital", "Mahinda Rajapaksa Hospital", "Base Hospital Galle"],
+        "Jaffna": ["Jaffna Teaching Hospital", "Base Hospital Jaffna", "Base Hospital Point Pedro"],
+        "Gampaha": ["Gampaha District General Hospital", "Wathupitiwala Base Hospital", "Base Hospital Gampaha"],
+        "Kurunegala": ["Kurunegala Teaching Hospital", "Polgahawela District Hospital", "Base Hospital Kurunegala"],
+        "Anuradhapura": ["Anuradhapura Teaching Hospital", "Base Hospital Anuradhapura"],
+        "Badulla": ["Badulla General Hospital", "Base Hospital Badulla"],
+        "Batticaloa": ["Batticaloa General Hospital", "Base Hospital Batticaloa"],
+        "Matara": ["Matara General Hospital", "Base Hospital Matara"],
+        "Nuwara Eliya": ["Nuwara Eliya General Hospital", "Base Hospital Nuwara Eliya"],
+        "Ratnapura": ["Ratnapura General Hospital"],
+        "Trincomalee": ["Trincomalee General Hospital"],
+        "Vavuniya": ["Vavuniya District Hospital"],
+        "Mannar": ["Base Hospital Mannar"],
+        "Kilinochchi": ["Kilinochchi District General Hospital", "Base Hospital Kilinochchi"],
+        "Polonnaruwa": ["Polonnaruwa General Hospital", "Base Hospital Polonnaruwa"],
+        "Matale": ["Matale General Hospital", "Base Hospital Matale"],
+        "Mullaitivu": ["Mullaitivu District General Hospital", "Base Hospital Mullaitivu"],
+        "Puttalam": ["Puttalam General Hospital", "Base Hospital Puttalam"],
+        "Monaragala": ["Monaragala General Hospital", "Base Hospital Monaragala"],
+        "Hambantota": ["Hambantota General Hospital"],
+        "Kegalle": ["Kegalle General Hospital"],
+        "Kalutara": ["Kalutara General Hospital", "Base Hospital Panadura"],
+        "Mahiyanganaya": ["Mahiyanganaya District Hospital"],
+        "Ampara": ["Base Hospital Ampara"]
+    };
+
+
+
+    document.getElementById("district").addEventListener("change", function () {
+        const district = this.value;
+        const hospitalSelect = document.getElementById("hospitalName");
+
+        // Clear existing options
+        hospitalSelect.innerHTML = '<option value="">Select Hospital</option>';
+
+        // If the district has hospitals, add them to the dropdown
+        if (district in hospitalsByDistrict) {
+            hospitalsByDistrict[district].forEach(hospital => {
+                let option = document.createElement("option");
+                option.value = hospital;
+                option.textContent = hospital;
+                hospitalSelect.appendChild(option);
+            });
+        }
+    });
+
+    document.getElementById("patientForm").addEventListener("submit", function(event) {
+        event.preventDefault();
+        alert("Blood request submitted successfully!");
+    });
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<!--<script>
+    // Mapping of hospitals to their blood bank availability
+    const hospitalBloodAvailability = {
+        "Colombo National Hospital": {
+            "A+": 5,
+            "A-": 3,
+            "B+": 4,
+            "B-": 2,
+            "O+": 8,
+            "O-": 1,
+            "AB+": 2,
+            "AB-": 1
+        },
+        "Kandy Teaching Hospital": {
+            "A+": 7,
+            "A-": 2,
+            "B+": 5,
+            "B-": 3,
+            "O+": 6,
+            "O-": 0,
+            "AB+": 4,
+            "AB-": 2
+        },
+        "Galle": {
+            "A+": 6,
+            "A-": 3,
+            "B+": 5,
+            "B-": 4,
+            "O+": 7,
+            "O-": 3,
+            "AB+": 1,
+            "AB-": 1
+        }
+    };
+
+    document.getElementById("district").addEventListener("change", function () {
+        const district = this.value;
+        const hospitalSelect = document.getElementById("hospitalName");
+
+        // Clear existing options
+        hospitalSelect.innerHTML = '<option value="">Select Hospital</option>';
+
+        // If the district has hospitals, add them to the dropdown
+        if (district === "Colombo") {
+            let hospitals = ["Colombo National Hospital", "Nawaloka Hospital", "Asiri Central Hospital"];
+            hospitals.forEach(hospital => {
+                let option = document.createElement("option");
+                option.value = hospital;
+                option.textContent = hospital;
+                hospitalSelect.appendChild(option);
+            });
+        }
+    });
+
+    document.getElementById("hospitalName").addEventListener("change", function () {
+        const selectedHospital = this.value;
+        const hospitalName = document.getElementById("hospital-name");
+        const bloodAvailabilityTable = document.getElementById("blood-availability");
+
+        // Update the hospital name in the table
+        hospitalName.textContent = selectedHospital;
+
+        // Clear the table
+        for (let row of bloodAvailabilityTable.rows) {
+            row.cells[1].textContent = "";
+        }
+
+        // Populate the blood availability table based on the selected hospital
+        if (selectedHospital in hospitalBloodAvailability) {
+            const availability = hospitalBloodAvailability[selectedHospital];
+            for (let i = 0; i < bloodAvailabilityTable.rows.length; i++) {
+                let bloodGroup = bloodAvailabilityTable.rows[i].cells[0].textContent;
+                if (availability[bloodGroup]) {
+                    bloodAvailabilityTable.rows[i].cells[1].textContent = availability[bloodGroup];
+                }
+            }
+        }
+    });
+</script>-->
 </body>
 </html>
