DonorRequest DTO and Entity Done

--- a/Front_End/Donors Requests.html
+++ b/Front_End/Donors Requests.html
@@ -106,10 +106,10 @@
 <!-- JavaScript for Donor Request Actions -->
 <script>
     document.addEventListener("DOMContentLoaded", function() {
-        const donorRequests = [
+        /*const donorRequests = [
             { id: 1, name: "John Doe", bloodGroup: "A+", contact: "123456789", hospital: "City Hospital", status: "Pending" },
             { id: 2, name: "Jane Smith", bloodGroup: "B-", contact: "987654321", hospital: "General Hospital", status: "Pending" }
-        ];
+        ];*/
 
         const tableBody = document.getElementById("donorRequestsTable");
         donorRequests.forEach(request => {
