--- a/Front_End/Patient Dashboard.html
+++ b/Front_End/Patient Dashboard.html
@@ -275,6 +275,7 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
     document.getElementById("patientForm").addEventListener("submit", function(event) {
         event.preventDefault();
@@ -338,7 +339,6 @@
         alert("Blood request submitted successfully!");
     });
 </script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <!--<script>
     // Mapping of hospitals to their blood bank availability
     const hospitalBloodAvailability = {
@@ -431,16 +431,18 @@
                 tableBody.empty();
                 resp.forEach((patient) => {
                     let row = `<tr>
-                                    <td>${patient.id}</td>
                                     <td>${patient.patientName}</td>
                                     <td>${patient.age}</td>
                                     <td>${patient.bloodGroup}</td>
                                     <td>${patient.gender}</td>
                                     <td>${patient.contactNumber}</td>
                                     <td>${patient.district}</td>
-                                    <td>${patient.hospitalName}</td>
                                     <td>${patient.email}</td>
                                     <td>${patient.homeAddress}</td>
+                                    <td>${patient.hospitalName}</td>
+                                    <td>${patient.requiredPints}</td>
+                                    <td>${patient.urgencyLevel}</td>
+
                                     <td>
                                         <button class="btn btn-warning btn-sm" onclick="editPatient(${patient.id})">Edit</button>
                                         <button class="btn btn-danger btn-sm" onclick="deletePatient(${patient.id})">Delete</button>
