--- a/Front_End/Donors Requests.html
+++ b/Front_End/Donors Requests.html
@@ -81,8 +81,21 @@
                     <th>Actions</th>
                 </tr>
                 </thead>
+
                 <tbody id="donorRequestsTable">
                 <!-- Data will be inserted dynamically -->
+                <!--<tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td>
+                        <button type="button" class="btn btn-primary">Accept</button>
+                        <button type="button" class="btn btn-danger">Deny</button>
+                    </td>
+                </tr>-->
                 </tbody>
             </table>
         </div>
@@ -103,8 +116,62 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
-<!-- JavaScript for Donor Request Actions -->
 <script>
+    document.addEventListener("DOMContentLoaded", function () {
+        loadDonorRequests();
+    });
+
+
+    function loadDonorRequests() {
+        fetch("http://localhost:8080/api/v1/donor-requests/pending")
+            .then(response => response.json())
+            .then(data => {
+                const tableBody = document.getElementById("donorRequestsTable");
+                tableBody.innerHTML = ""; // Clear previous entries
+
+                data.forEach(request => {
+                    const row = document.createElement("tr");
+                    row.innerHTML = `
+                    <td>${request.id}</td>
+                    <td>${request.donorName}</td>
+                    <td>${request.bloodGroup}</td>
+                    <td>${request.contact}</td>
+                    <td>${request.hospital}</td>
+                    <td><span class="badge bg-warning">${request.status}</span></td>
+                    <td>
+                        <button class="btn btn-success btn-sm" onclick="acceptRequest(${request.id})">Accept</button>
+                        <button class="btn btn-danger btn-sm" onclick="rejectRequest(${request.id})">Reject</button>
+                    </td>
+                `;
+                    tableBody.appendChild(row);
+                });
+            })
+            .catch(error => console.error("Error loading requests:", error));
+    }
+
+    function acceptRequest(requestId) {
+        fetch(`http://localhost:8080/api/v1/donor-requests/accept/${requestId}`, { method: "PUT" })
+            .then(response => response.json())
+            .then(() => {
+                alert("Request accepted successfully!");
+                loadDonorRequests(); // Reload table
+            })
+            .catch(error => console.error("Error accepting request:", error));
+    }
+
+    function rejectRequest(requestId) {
+        fetch(`http://localhost:8080/api/v1/donor-requests/reject/${requestId}`, { method: "DELETE" })
+            .then(() => {
+                alert("Request rejected successfully!");
+                loadDonorRequests(); // Reload table
+            })
+            .catch(error => console.error("Error rejecting request:", error));
+    }
+</script>
+
+
+<!-- JavaScript for Donor Request Actions -->
+<!--<script>
     document.addEventListener("DOMContentLoaded", function() {
         /*const donorRequests = [
             { id: 1, name: "John Doe", bloodGroup: "A+", contact: "123456789", hospital: "City Hospital", status: "Pending" },
@@ -134,7 +201,7 @@
         document.getElementById(`status-${requestId}`).innerText = status;
         alert(`Request ID ${requestId} has been ${status}`);
     }
-</script>
+</script>-->
 
 </body>
 </html>
