--- a/Front_End/Patient Dashboard.html
+++ b/Front_End/Patient Dashboard.html
@@ -78,7 +78,7 @@
                             </select>
                         </div>
 
-                        <div class="form-group">
+                        <!--<div class="form-group">
                             <div class="form-check-inline">
                                 <label class="form-check-label" for="radio1">Gender :
                                     <input type="radio" class="form-check-input" id="radio1" name="optradio"
@@ -97,15 +97,15 @@
                                            value="Others">Others
                                 </label>
                             </div>
-                        </div><br>
-                        <!--<div class="mb-3">
+                        </div><br>-->
+                        <div class="mb-3">
                             <label class="form-label">Gender</label>
                             <div>
                                 <input type="radio" name="gender" value="Male" checked> Male
                                 <input type="radio" name="gender" value="Female"> Female
                                 <input type="radio" name="gender" value="Other"> Other
                             </div>
-                        </div>-->
+                        </div>
 
                         <div class="mb-3">
                             <label for="contactNumber" class="form-label">Contact Number</label>
